# nusantara-calendar

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SOURCES.md  SPEC.md  TODO.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/balinese/: Cargo.toml
crates/balinese/src/: balinese_date.rs  error.rs  lib.rs  pawukon.rs  sasih.rs  wariga.rs  wewaran.rs
crates/batak/: Cargo.toml
crates/batak/src/: lib.rs
crates/bugis/: Cargo.toml
crates/bugis/src/: lib.rs
crates/calendar-core/: CHANGELOG.md  Cargo.toml  README.md
crates/calendar-core/src/: auspiciousness.rs  lib.rs
crates/chinese-nusantara/: Cargo.toml
crates/chinese-nusantara/src/: lib.rs
crates/dayak/: Cargo.toml
crates/dayak/src/: lib.rs
crates/dewasa-engine/: Cargo.toml
crates/dewasa-engine/src/: lib.rs
crates/hijriyah/: Cargo.toml
crates/hijriyah/src/: lib.rs
crates/jawa/: Cargo.toml
crates/jawa/src/: lib.rs
crates/minangkabau/: Cargo.toml
crates/minangkabau/src/: lib.rs
crates/nusantara-calendar/: CHANGELOG.md  Cargo.toml  README.md
crates/nusantara-calendar/src/: lib.rs
crates/nusantara-calendar/src/balinese/: balinese_module_tests.rs  mod.rs  tests.rs
crates/nusantara-calendar/src/batak/: mod.rs
crates/nusantara-calendar/src/bugis/: mod.rs
crates/nusantara-calendar/src/chinese_nusantara/: mod.rs
crates/nusantara-calendar/src/dayak/: mod.rs
crates/nusantara-calendar/src/dewasa_engine/: mod.rs
crates/nusantara-calendar/src/hijriyah/: mod.rs
crates/nusantara-calendar/src/jawa/: mod.rs  tests.rs
crates/nusantara-calendar/src/minangkabau/: mod.rs
crates/nusantara-calendar/src/sasak/: mod.rs
crates/nusantara-calendar/src/sunda/: mod.rs
crates/nusantara-calendar/src/tengger/: mod.rs
crates/nusantara-calendar/src/toraja/: mod.rs
crates/sasak/: Cargo.toml
crates/sasak/src/: lib.rs
crates/sunda/: Cargo.toml
crates/sunda/src/: lib.rs
crates/tengger/: Cargo.toml
crates/tengger/src/: lib.rs
crates/toraja/: Cargo.toml
crates/toraja/src/: lib.rs
docs/: PRE_COMMIT.md
