[workspace]
members = [
    # Core traits and utilities
    "crates/calendar-core",

    # Layer 1: Pure arithmetic calendars (no_std + alloc)
    "crates/jawa",
    "crates/hijriyah",
    "crates/batak",
    "crates/sunda",
    "crates/tengger",
    "crates/bugis",
    "crates/sasak",
    "crates/dayak",
    "crates/toraja",
    "crates/minangkabau",

    # Layer 2: Calendars with std dependencies
    "crates/chinese-nusantara",

    # Layer 3: Aggregation engines
    "crates/dewasa-engine",

    # External dependency (already published)
    # "crates/balinese-calendar", # via crates.io, not in workspace
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/SHA888/nusantara-calendar"
repository = "https://github.com/SHA888/nusantara-calendar"
authors = ["Nusantara Calendar Contributors"]

[workspace.dependencies]
# Core dependencies
thiserror = "2"
serde = { version = "1", features = ["derive"] }
wasm-bindgen = "0.2"
libm = "0.2"

# External calendar dependencies
balinese-calendar = "0.2"  # Published on crates.io
nongli = "0.4"  # Chinese calendar, license audit required

[workspace.metadata.release]
# Configuration for cargo-release
tag-name = "v{{version}}"
pre-release-hook = ["cargo", "test"]
pre-release-replacements = [
    {file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [{{version}}] - {{date}}"},
    {file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{{version}}] - {{date}}"},
]

[profile.release]
# Optimize for size in WASM builds
lto = true
opt-level = "s"
panic = "abort"
codegen-units = 1

[profile.release.package."*"]
# Ensure all packages use the same release settings
inherits = "release"
