[package]
name = "balinese"
version = "0.2.0"
edition = "2021"
rust-version = "1.80"
license = "MIT OR Apache-2.0"
description = "Balinese Saka Calendar (Kalender Bali) with calendar-core integration"
repository = "https://github.com/SHA888/nusantara-calendar"
authors = ["Nusantara Calendar Contributors"]

[dependencies]
# Use workspace dependencies
calendar-core = { path = "../calendar-core", version = "0.1.0" }
thiserror = { workspace = true }

[features]
default = ["std"]
std = []
serde = ["dep:serde", "calendar-core/serde"]
wasm = ["calendar-core/wasm"]

[dependencies.serde]
workspace = true
optional = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true, optional = true }

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
